# Regex-Isolator

./: .gitignore  README.md  main.py  main.pyw
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json
desktop/scripts/: build-portable.ps1  generate-icons.ps1  sign-windows-artifact.ps1
desktop/src/: App.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/scanner/: engine.rs  mod.rs  response.rs  scan_job.rs
desktop/src/components/: PatternDock.tsx  PatternStudioPanel.tsx  PresetLibraryPanel.tsx  RegexHelpPanel.tsx  ResultsPanel.tsx  SourcePanel.tsx
desktop/src/lib/: patternAnalysis.ts  presets.ts  regexHelp.ts
docs/: tauri-migration-inventory.md  tauri-rust-migration.md
